# GDV_myCarProj

GDV_RenderingComp_MET/: CMakeLists.txt  LoadTexture.h  car_scene  makefile
car_design_v1/: CMakeLists.txt  car.cpp  car.h  main.cpp
car_design_v2_press_K_L_Enter_Space/: car.cpp  car.h  main.cpp
car_design_v3_withTexture_need_SOIL/: CMakeLists.txt  car.cpp  car.h  main.cpp  makefile
car_design_v3_withTexture_need_SOIL mit static library SOIL2/: CMakeLists.txt  car.cpp  main.cpp
car_scene_code/: CMakeLists.txt  car.cpp  car.h  car_scene  main.cpp
car_scene_without_SOIL/: main.cpp  terrain.cpp  terrain.h
